# ConGuard

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml  server_harmbench_judge_smoke.yaml  server_target_smoke.yaml
docs/: baseline_result_matrix_template.csv  evaluation_protocol_research.md  protocol_confirmation_table.csv  protocol_confirmation_table.md
examples/seeds/: harmful_goals_sample.jsonl
src/guard_baseline/: __init__.py  adapters.py  cli.py  config.py  hf_adapters.py  io.py  mock_adapters.py  model_stubs.py  pipeline.py  registry.py  schema.py
